fix typo in zypp-plugin comment

--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -17,7 +17,7 @@
   </solvables>
   
   <!--  Set enabled to "true" in order to save zypper commandline arguments in snapshot descriptions.
-        by default argoments following zypp(zypper) are truncated at 32 chars. change to 0 for unlimited output -->
+        by default arguments following zypp(zypper) are truncated at 32 chars. change to 0 for unlimited output -->
   
   <description>
 	  <zypper-extended-description enabled="false">32</zypper-extended-description>
