Build also on Ubuntu 16.10

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,8 @@ UBUNTU_FLAVOURS =	\
     xUbuntu_14.10	\
     xUbuntu_15.04	\
     xUbuntu_15.10	\
-    xUbuntu_16.04
+    xUbuntu_16.04	\
+    xUbuntu_16.10
 
 show-debian:
 	@echo "Debian flavors: $(DEBIAN_FLAVOURS)"
