Improve Debian Packaging (#319)
* Improve Debian packaging

- build a single tarball with all Debian packaging (workaround for an OBS bug
  https://github.com/openSUSE/obs-service-source_validator/pull/41)
- rename debian/ to package_deb/ to not conflict with
  upstream packaging (github#310)

* Use dists/debian path for the Debian files

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,7 +59,8 @@ package-clean:
 # $< is the first depencency of the rule, i.e. snapper-$(VERSION).tar.gz in this case.
 #
 package: snapper-$(VERSION).tar.bz2 package-clean
-	cp debian/* package/
+	tar cfzv package/debian.tar.gz --transform='s|dists/||' --show-transformed --exclude='*.in' dists/debian/*
+	cp dists/debian/*.dsc.in package/
 	echo "$(shell md5sum $< | sed -e 's/\s.*//') $(shell wc -c $<)" >>package/snapper-Debian.dsc.in
 	echo "$(shell md5sum $< | sed -e 's/\s.*//') $(shell wc -c $<)" >>package/snapper-xUbuntu.dsc.in
 	for FLAV in $(DEBIAN_FLAVOURS); do cp -v package/snapper-Debian.dsc.in  package/snapper-$${FLAV}.dsc; done
