Basic ZFS functionality
Passes basic and real testsuites

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -51,6 +51,12 @@ libsnapper_la_SOURCES +=				\
 	LvmCache.cc		LvmCache.h
 endif
 
+if ENABLE_ZFS
+libsnapper_la_SOURCES +=				\
+	Zfs.cc			Zfs.h		        \
+	ZfsUtils.cc		ZfsUtils.h
+endif
+
 if ENABLE_ROLLBACK
 libsnapper_la_SOURCES +=				\
 	MntTable.cc		MntTable.h
