--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -15,6 +15,10 @@
 # Please submit bugfixes or comments via http://bugs.opensuse.org/
 #
 
+#Compat macro for new _fillupdir macro introduced in Nov 2017
+%if ! %{defined _fillupdir}
+  %define _fillupdir /var/adm/fillup-templates
+%endif
 
 Name:           snapper
 Version:        @VERSION@
@@ -105,7 +109,7 @@ make %{?_smp_mflags}
 rm -f "%{buildroot}/%{_libdir}"/*.la "%{buildroot}/%{_lib}/security/pam_snapper.la"
 
 %if 0%{?suse_version}
-install -D -m 644 data/sysconfig.snapper "%{buildroot}/var/adm/fillup-templates/sysconfig.snapper"
+install -D -m 644 data/sysconfig.snapper "%{buildroot}%{_fillupdir}/sysconfig.snapper"
 %else
 install -D -m 644 data/sysconfig.snapper "%{buildroot}/etc/sysconfig/snapper"
 %endif
@@ -162,7 +166,7 @@ This package contains libsnapper, a library for filesystem snapshot management.
 %doc %{_defaultdocdir}/snapper/AUTHORS
 %doc %{_defaultdocdir}/snapper/COPYING
 %if 0%{?suse_version}
-/var/adm/fillup-templates/sysconfig.snapper
+%{_fillupdir}/sysconfig.snapper
 %else
 %config(noreplace) %{_sysconfdir}/sysconfig/snapper
 %endif
