enable AND activate the timers

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -127,8 +127,14 @@ make check
 %post
 # special hack, since the macros were added much later than
 # the systemd timer
-test -f /etc/cron.hourly/suse.de-snapper && systemctl preset snapper-timeline.timer ||:
-test -f /etc/cron.daily/suse.de-snapper && systemctl preset snapper-cleanup.timer ||:
+if [ -f /etc/cron.hourly/suse.de-snapper ]; then
+ systemctl preset snapper-timeline.timer ||:
+ systemctl is-enabled -q snapper-timeline.timer && systemctl start snapper-timeline.timer || :
+fi
+if [ -f /etc/cron.daily/suse.de-snapper ];
+ systemctl preset snapper-cleanup.timer ||:
+ systemctl is-enabled -q snapper-cleanup.timer && systemctl start snapper-cleanup.timer || :
+fi
 %service_add_post snapper-boot.service snapper-boot.timer snapper-cleanup.service snapper-cleanup.timer snapper-timeline.service snapper-timeline.timer
 
 %preun
