fixed bash syntax

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -131,7 +131,7 @@ if [ -f /etc/cron.hourly/suse.de-snapper ]; then
  systemctl preset snapper-timeline.timer ||:
  systemctl is-enabled -q snapper-timeline.timer && systemctl start snapper-timeline.timer || :
 fi
-if [ -f /etc/cron.daily/suse.de-snapper ];
+if [ -f /etc/cron.daily/suse.de-snapper ]; then
  systemctl preset snapper-cleanup.timer ||:
  systemctl is-enabled -q snapper-cleanup.timer && systemctl start snapper-cleanup.timer || :
 fi
