--- a/data/cleanup.service
+++ b/data/cleanup.service
@@ -6,4 +6,5 @@ Documentation=man:snapper(8) man:snapper-configs(5)
 [Service]
 Type=simple
 ExecStart=/usr/lib/snapper/systemd-helper --cleanup
-
+IOSchedulingClass=idle
+CPUSchedulingPolicy=idle
