Update timeline.service as Type=oneshot
Systemd starts units in parallel unless otherwise specified by the unit files. A `Type=simple` service has no such constraint, and as such any `WantedBy` service introduced to run after `snapper-timeline.service` will execute in parallel instead of waiting until snapper is finished. By changing `simple` to `oneshot`, other units can be added to the system that use `WantedBy=snapper-timeline.service` and they will actually run after `snapper-timeline.service` is finished. When `snapper-timeline.service` is installed by itself this has no effect, and the unit continues to operate as it did for anyone that doesn't have any dependent services.

--- a/data/timeline.service
+++ b/data/timeline.service
@@ -4,6 +4,6 @@ Description=Timeline of Snapper Snapshots
 Documentation=man:snapper(8) man:snapper-configs(5)
 
 [Service]
-Type=simple
+Type=oneshot
 ExecStart=/usr/lib/snapper/systemd-helper --timeline
 
