--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -12,4 +12,4 @@ libdbus_la_SOURCES =					\
 	DBusMainLoop.cc		DBusMainLoop.h
 
 libdbus_la_LIBADD = $(DBUS_LIBS)
-
+libdbus_la_LDFLAGS = -lboost_system -lboost_thread
