--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -119,7 +119,7 @@ install -D -m 644 data/sysconfig.snapper "%{buildroot}/etc/sysconfig/snapper"
 %{find_lang} snapper
 
 %check
-make check
+make %{?_smp_mflags} check LOCALEDIR=%{buildroot}%{_datadir}/locale
 
 %pre
 %if 0%{?suse_version}
