--- a/dists/debian/snapper-xUbuntu.dsc.in.in
+++ b/dists/debian/snapper-xUbuntu.dsc.in.in
@@ -4,7 +4,7 @@ Version: @VERSION@
 Binary: snapper
 Maintainer: Arvin Schnell <aschnell@suse.com>
 Architecture: any
-Build-Depends: debhelper (>= 4.1.16), acl-dev, g++, libboost-dev, libboost-thread-dev, libboost-system-dev, libboost-test-dev, libxml2-dev, libz-dev, libdbus-1-dev, libpam-dev, xsltproc, docbook-xsl, language-pack-en, language-pack-de
+Build-Depends: debhelper (>= 4.1.16), acl-dev, g++, libboost-dev, libboost-thread-dev, libboost-system-dev, libboost-test-dev, libxml2-dev, libz-dev, libdbus-1-dev, libpam-dev, xsltproc, docbook-xsl, language-pack-en, language-pack-de, language-pack-fr
 #
 # The 'Files' line is generated during 'make package':
 # Files:
