--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -346,7 +346,7 @@
 		<para>Disable display of used space.</para>
 		<para>Calculating the used space needs some time. Thus
 		this option can speedup the listing.</para>
-		<para>Display of used space is automatically disable
+		<para>Display of used space is automatically disabled
 		if not available, e.g. quota not enabled on btrfs.</para>
 	      </listitem>
 	    </varlistentry>
