--- a/data/org.opensuse.Snapper.service
+++ b/data/org.opensuse.Snapper.service
@@ -1,5 +1,5 @@
 # DBus service activation config
 [D-BUS Service]
 Name=org.opensuse.Snapper
-Exec=/usr/sbin/snapperd
+Exec=/usr/bin/nice /usr/bin/ionice -c 3 /usr/sbin/snapperd
 User=root
