--- a/data/timeline.service
+++ b/data/timeline.service
@@ -6,4 +6,6 @@ Documentation=man:snapper(8) man:snapper-configs(5)
 [Service]
 Type=simple
 ExecStart=/usr/lib/snapper/systemd-helper --timeline
+IOSchedulingClass=idle
+CPUSchedulingPolicy=idle
 
