- also build for Ubuntu 18.10

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,8 @@ UBUNTU_FLAVOURS =	\
     xUbuntu_16.10	\
     xUbuntu_17.04	\
     xUbuntu_17.10	\
-    xUbuntu_18.04
+    xUbuntu_18.04	\
+    xUbuntu_18.10
 
 show-debian:
 	@echo "Debian flavors: $(DEBIAN_FLAVOURS)"
