add option to disable used space update
Relevant only on Btrfs. Avoid rescanning the qgroups several time
when multiple configurations exists on the same filesystem.

--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -356,6 +356,12 @@
 		this option can speedup the listing.</para>
 	      </listitem>
 	    </varlistentry>
+            <varlistentry>
+              <term><option>--no-used-space-update</option></term>
+              <listitem>
+                <para>Do not update used space information.</para>
+              </listitem>
+            </varlistentry>
 	    <varlistentry>
 	      <term><option>-a, --all-configs</option></term>
 	      <listitem>
