- more updates to Dockerfile for tumbleweed

--- a/Dockerfile.tumbleweed
+++ b/Dockerfile.tumbleweed
@@ -11,6 +11,9 @@ RUN zypper --non-interactive in --no-recommends \
   gcc-c++ \
   grep \
   libacl-devel \
+  libboost_system-devel \
+  libboost_test-devel \
+  libboost_thread-devel \
   libbtrfs-devel \
   libmount-devel \
   libtool \
