--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,8 @@ UBUNTU_FLAVOURS =	\
     xUbuntu_17.04	\
     xUbuntu_17.10	\
     xUbuntu_18.04	\
-    xUbuntu_18.10
+    xUbuntu_18.10	\
+    xUbuntu_19.04
 
 show-debian:
 	@echo "Debian flavors: $(DEBIAN_FLAVOURS)"
