--- a/Dockerfile.leap
+++ b/Dockerfile.leap
@@ -1,4 +1,4 @@
-# Build the latest openSUSE Leap (42.x) image
+# Build the latest openSUSE Leap image
 FROM opensuse/leap
 
 RUN zypper --non-interactive in --no-recommends \
