Add option to reuse existing subvolume
If a subvolume exists already mksubvolume will abort. In certain
situations however, e.g. if there was a rollback to a previous snapshot,
it may be desirable to be able to reuse this subvolume.

This will make it possible to use the mksubvolume command in package
scripts.

To avoid having to duplicate the exception handler code multiple times
a C wrapper object was introduced to automatically clean up in the
destructor.

Fixes https://github.com/openSUSE/snapper/issues/236.

--- a/doc/mksubvolume.xml.in
+++ b/doc/mksubvolume.xml.in
@@ -21,6 +21,7 @@
   <refsynopsisdiv id='synopsis'>
     <cmdsynopsis>
       <command>mksubvolume</command>
+      <arg choice='opt'>--force</arg>
       <arg choice='opt'>--nocow</arg>
       <arg choice='opt'>--verbose</arg>
       <arg choice='req'><replaceable>path</replaceable></arg>
@@ -37,6 +38,13 @@
   <refsect1 id='global_options'>
     <title>OPTIONS</title>
     <variablelist>
+      <varlistentry>
+	<term><option>-f, --force</option></term>
+	<listitem>
+	  <para>Ignore if subvolume already exists - reuse it and
+	  proceed.</para>
+	</listitem>
+      </varlistentry>
       <varlistentry>
 	<term><option>--nocow</option></term>
 	<listitem>
