Stomp protocol basics (WIP)

--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -2,3 +2,4 @@ plugindir = /usr/lib/zypp/plugins/commit
 plugin_PROGRAMS = snapper-zypp-plugin
 
 snapper_zypp_plugin_SOURCES = snapper_zypp_plugin.cc
+snapper_zypp_plugin_LDFLAGS = -lboost_regex
