--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -15,6 +15,7 @@ RUN apt-get update && \
   g++ \
   gettext \
   libboost-dev \
+  libboost-regex-dev \
   libboost-system-dev \
   libboost-test-dev \
   libboost-thread-dev \
