Use the override keyword
Effective Modern C++, Item 12: Declare overriding functions `override`

--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -1,5 +1,6 @@
 plugindir = /usr/lib/zypp/plugins/commit
 plugin_PROGRAMS = snapper-zypp-plugin
 
+AM_CXXFLAGS = -Wsuggest-override
 snapper_zypp_plugin_SOURCES = snapper_zypp_plugin.cc
 snapper_zypp_plugin_LDFLAGS = -lboost_regex
