--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -7,4 +7,8 @@ snapper_zypp_plugin_SOURCES = \
     snapper_zypp_plugin.cc \
     zypp_commit_plugin.cc zypp_commit_plugin.h \
     zypp_plugin.cc zypp_plugin.h
-snapper_zypp_plugin_LDFLAGS = ../snapper/libsnapper.la ../dbus/libdbus.la -lboost_regex
+snapper_zypp_plugin_LDFLAGS = \
+    ../client/libclient.la \
+    ../snapper/libsnapper.la \
+    ../dbus/libdbus.la \
+    -lboost_regex
