--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -72,6 +72,7 @@ BuildRequires:  xsltproc
 BuildRequires:  libzypp(plugin:commit)
 %endif
 BuildRequires:  pam-devel
+BuildRequires:  rapidjson-devel
 Requires:       diffutils
 Requires:       libsnapper@LIBVERSION_MAJOR@ = %version
 %if 0%{?suse_version}
