--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -6,8 +6,9 @@ AM_CPPFLAGS = -I$(top_srcdir) $(DBUS_CFLAGS)
 
 LDADD = ../snapper/libsnapper.la ../dbus/libdbus.la -lboost_unit_test_framework
 
-check_PROGRAMS = sysconfig-get1.test dirname1.test basename1.test		\
-	equal-date.test dbus-escape.test cmp-lt.test humanstring.test table.test
+check_PROGRAMS = sysconfig-get1.test dirname1.test basename1.test		    \
+	equal-date.test dbus-escape.test cmp-lt.test humanstring.test table.test    \
+	csv-formatter.test json-formatter.test
 
 if ENABLE_BTRFS_QUOTA
 check_PROGRAMS +=  qgroup1.test
@@ -25,3 +26,6 @@ humanstring_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
 table_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
+csv_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
+
+json_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
