--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -4,7 +4,7 @@
 
 AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64
 
-AM_CPPFLAGS = -I/usr/include/libxml2
+AM_CPPFLAGS = $(XML2_CFLAGS)
 
 lib_LTLIBRARIES = libsnapper.la
 
@@ -62,7 +62,7 @@ libsnapper_la_SOURCES +=				\
 endif
 
 libsnapper_la_LDFLAGS = -version-info @LIBVERSION_INFO@
-libsnapper_la_LIBADD = -lboost_thread -lboost_system -lxml2 -lacl -lz -lm
+libsnapper_la_LIBADD = -lboost_thread -lboost_system $(XML2_LIBS) -lacl -lz -lm
 if ENABLE_ROLLBACK
 libsnapper_la_LIBADD += -lmount
 endif
