--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -1,7 +1,7 @@
 plugindir = /usr/lib/zypp/plugins/commit
 plugin_PROGRAMS = snapper-zypp-plugin
 
-AM_CPPFLAGS = $(DBUS_CFLAGS)
+AM_CPPFLAGS = $(DBUS_CFLAGS) $(XML2_CFLAGS)
 AM_CXXFLAGS = -Wsuggest-override
 snapper_zypp_plugin_SOURCES = \
     snapper_zypp_plugin.cc \
