Run the zypp-plugin tests
The tests need rubygem ruby-dbus
but we're not adding a build time dependency in the RPM spec file,
instead putting it to the Docker images used in Travis

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -8,6 +8,7 @@ RUN apt-get update && \
   autoconf \
   automake \
   build-essential \
+  dbus \
   debhelper \
   devscripts \
   docbook-xsl \
@@ -27,6 +28,7 @@ RUN apt-get update && \
   libz-dev \
   locales-all \
   rapidjson-dev \
+  ruby-dbus \
   xsltproc
 
 RUN mkdir -p /usr/src/app
