--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -8,6 +8,7 @@ RUN apt-get update && \
   autoconf \
   automake \
   build-essential \
+  dbus \
   debhelper \
   devscripts \
   docbook-xsl \
@@ -28,6 +29,7 @@ RUN apt-get update && \
   libxml2-dev \
   libz-dev \
   rapidjson-dev \
+  ruby-dbus \
   xsltproc
 
 RUN mkdir -p /usr/src/app
